--- a/spring-eshopping/src/main/resources/application.properties
+++ b/spring-eshopping/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+server.port=9000
+
+pring.thymeleaf.cache=false
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3307/emmanuel?useSSL=false}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+#Custom
+#number of items loaded on index
+articleservice.featured-items-number=8
 
